[gd_scene load_steps=56 format=2]

[ext_resource path="res://art/fonts/yoster.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/knight_m_idle_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/knight_m_idle_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/knight_m_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/lizard_f_idle_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/ice_zombie_idle_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/orc_warrior_idle_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/big_demon_idle_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/big_demon_idle_anim_f3.png" type="Texture" id=9]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/imp_idle_anim_f0.png" type="Texture" id=10]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/big_demon_idle_anim_f1.png" type="Texture" id=11]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/knight_m_idle_anim_f3.png" type="Texture" id=12]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/ice_zombie_idle_anim_f1.png" type="Texture" id=13]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/lizard_f_idle_anim_f3.png" type="Texture" id=14]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/lizard_f_idle_anim_f0.png" type="Texture" id=15]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/goblin_idle_anim_f3.png" type="Texture" id=16]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/lizard_f_idle_anim_f2.png" type="Texture" id=17]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/imp_idle_anim_f1.png" type="Texture" id=18]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/ice_zombie_idle_anim_f3.png" type="Texture" id=19]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/big_demon_idle_anim_f2.png" type="Texture" id=20]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/goblin_idle_anim_f2.png" type="Texture" id=21]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/imp_idle_anim_f3.png" type="Texture" id=22]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/imp_idle_anim_f2.png" type="Texture" id=23]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/skelet_idle_anim_f2.png" type="Texture" id=24]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/goblin_idle_anim_f0.png" type="Texture" id=25]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/skelet_idle_anim_f0.png" type="Texture" id=26]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/ice_zombie_idle_anim_f2.png" type="Texture" id=27]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/orc_warrior_idle_anim_f0.png" type="Texture" id=28]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/orc_warrior_idle_anim_f1.png" type="Texture" id=29]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/goblin_idle_anim_f1.png" type="Texture" id=30]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/tiny_zombie_idle_anim_f0.png" type="Texture" id=31]
[ext_resource path="res://art/Miscellaneous/Frame_charcoalBG.png" type="Texture" id=32]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/tiny_zombie_idle_anim_f2.png" type="Texture" id=33]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/orc_warrior_idle_anim_f2.png" type="Texture" id=34]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/tiny_zombie_idle_anim_f1.png" type="Texture" id=35]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/skelet_idle_anim_f3.png" type="Texture" id=36]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/tiny_zombie_idle_anim_f3.png" type="Texture" id=37]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/skelet_idle_anim_f1.png" type="Texture" id=38]
[ext_resource path="res://scripts/Start Screen.gd" type="Script" id=39]
[ext_resource path="res://art/packs/0x72_DungeonTilesetII_v1.4/frames/weapon_regular_sword.png" type="Texture" id=40]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 20 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 34 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 5 ), ExtResource( 17 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 27 ), ExtResource( 13 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 30 ), ExtResource( 21 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 24 ), ExtResource( 38 ), ExtResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Start Screen" type="CanvasLayer"]
script = ExtResource( 39 )

[node name="Frame" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -636.0
margin_top = -348.0
margin_right = 414.0
margin_bottom = 702.0
rect_scale = Vector2( 1.22, 0.686 )
texture = ExtResource( 32 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 60.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "Speedquest"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 300.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 300.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 3 )
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 115.0
margin_right = 300.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 4 )
text = "Exit Game"

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -31.0
margin_right = 147.0
margin_bottom = 112.0
custom_styles/panel = SubResource( 5 )

[node name="Sword" type="AnimatedSprite" parent="Panel"]
position = Vector2( 14, 84 )
rotation = 0.785398
scale = Vector2( 2, 2 )
frames = SubResource( 15 )

[node name="Knight" type="AnimatedSprite" parent="Panel"]
position = Vector2( -5, 79.5 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
frame = 1
playing = true

[node name="Demon" type="AnimatedSprite" parent="Panel"]
position = Vector2( 242, 1 )
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
frame = 2
playing = true
flip_h = true

[node name="Demon2" type="AnimatedSprite" parent="Panel"]
position = Vector2( 252, 32 )
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
frame = 2
playing = true
flip_h = true

[node name="Demon3" type="AnimatedSprite" parent="Panel"]
position = Vector2( 269, 54 )
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
frame = 1
playing = true
flip_h = true

[node name="Demon4" type="AnimatedSprite" parent="Panel"]
position = Vector2( 261, 81 )
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
frame = 1
playing = true
flip_h = true

[node name="Orc" type="AnimatedSprite" parent="Panel"]
position = Vector2( 208, 19 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
frame = 3
playing = true
flip_h = true

[node name="Orc2" type="AnimatedSprite" parent="Panel"]
position = Vector2( 214, 34 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
frame = 2
playing = true
flip_h = true

[node name="Orc3" type="AnimatedSprite" parent="Panel"]
position = Vector2( 222, 46 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
frame = 2
playing = true
flip_h = true

[node name="Orc4" type="AnimatedSprite" parent="Panel"]
position = Vector2( 207, 61 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
frame = 1
playing = true
flip_h = true

[node name="Orc5" type="AnimatedSprite" parent="Panel"]
position = Vector2( 226, 53 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
frame = 1
playing = true
flip_h = true

[node name="Orc6" type="AnimatedSprite" parent="Panel"]
position = Vector2( 212, 77 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
frame = 1
playing = true
flip_h = true

[node name="Orc7" type="AnimatedSprite" parent="Panel"]
position = Vector2( 232, 81 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
playing = true
flip_h = true

[node name="Orc8" type="AnimatedSprite" parent="Panel"]
position = Vector2( 219, 93 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
playing = true
flip_h = true

[node name="Lizard" type="AnimatedSprite" parent="Panel"]
position = Vector2( 140, 28 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
frame = 3
playing = true
flip_h = true

[node name="Lizard2" type="AnimatedSprite" parent="Panel"]
position = Vector2( 159, 25 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
frame = 2
playing = true
flip_h = true

[node name="Lizard3" type="AnimatedSprite" parent="Panel"]
position = Vector2( 181, 29 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
frame = 2
playing = true
flip_h = true

[node name="Lizard4" type="AnimatedSprite" parent="Panel"]
position = Vector2( 175, 51 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
frame = 2
playing = true
flip_h = true

[node name="Lizard5" type="AnimatedSprite" parent="Panel"]
position = Vector2( 187, 43 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
frame = 1
playing = true
flip_h = true

[node name="lizard6" type="AnimatedSprite" parent="Panel"]
position = Vector2( 188, 74 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
playing = true
flip_h = true

[node name="lizard7" type="AnimatedSprite" parent="Panel"]
position = Vector2( 172, 82 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
playing = true
flip_h = true

[node name="Zombie" type="AnimatedSprite" parent="Panel"]
position = Vector2( 130, 54 )
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
playing = true
flip_h = true

[node name="Zombie2" type="AnimatedSprite" parent="Panel"]
position = Vector2( 142, 57 )
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
playing = true
flip_h = true

[node name="Zombie3" type="AnimatedSprite" parent="Panel"]
position = Vector2( 150, 69 )
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
playing = true
flip_h = true

[node name="Zombie4" type="AnimatedSprite" parent="Panel"]
position = Vector2( 140, 85 )
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
playing = true
flip_h = true

[node name="Zombie5" type="AnimatedSprite" parent="Panel"]
position = Vector2( 155, 93 )
scale = Vector2( 2, 2 )
frames = SubResource( 10 )
playing = true
flip_h = true

[node name="Imp" type="AnimatedSprite" parent="Panel"]
position = Vector2( 113, 58 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
frame = 1
playing = true
flip_h = true

[node name="Imp2" type="AnimatedSprite" parent="Panel"]
position = Vector2( 117, 69 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
frame = 1
playing = true
flip_h = true

[node name="Imp3" type="AnimatedSprite" parent="Panel"]
position = Vector2( 124, 79 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
frame = 1
playing = true
flip_h = true

[node name="Imp4" type="AnimatedSprite" parent="Panel"]
position = Vector2( 122, 96 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
playing = true
flip_h = true

[node name="Goblin" type="AnimatedSprite" parent="Panel"]
position = Vector2( 96, 64 )
scale = Vector2( 2, 2 )
frames = SubResource( 12 )
frame = 3
playing = true
flip_h = true

[node name="Goblin2" type="AnimatedSprite" parent="Panel"]
position = Vector2( 109, 79 )
scale = Vector2( 2, 2 )
frames = SubResource( 12 )
frame = 2
playing = true
flip_h = true

[node name="Goblin3" type="AnimatedSprite" parent="Panel"]
position = Vector2( 100, 90 )
scale = Vector2( 2, 2 )
frames = SubResource( 12 )
frame = 2
playing = true
flip_h = true

[node name="Skeleton" type="AnimatedSprite" parent="Panel"]
position = Vector2( 85, 82 )
scale = Vector2( 2, 2 )
frames = SubResource( 13 )
playing = true
flip_h = true

[node name="Skeleton2" type="AnimatedSprite" parent="Panel"]
position = Vector2( 73, 90.5 )
scale = Vector2( 2, 2 )
frames = SubResource( 13 )
frame = 2
playing = true
flip_h = true

[node name="Tzombie" type="AnimatedSprite" parent="Panel"]
position = Vector2( 54, 89.5 )
scale = Vector2( 2, 2 )
frames = SubResource( 14 )
frame = 2
playing = true
flip_h = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
